Root project revision should always point to top CMakeLists file.

--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -1,7 +1,7 @@
 list( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../fc/GitVersionGen" )
 include( GetGitRevisionDescription )
 
-get_git_head_revision_dir("${CMAKE_CURRENT_SOURCE_DIR}" ROOT_GIT_REFSPEC ROOT_GIT_REVISION_SHA)
+get_git_head_revision_dir("${CMAKE_SOURCE_DIR}" ROOT_GIT_REFSPEC ROOT_GIT_REVISION_SHA)
 get_git_head_revision("${CMAKE_CURRENT_SOURCE_DIR}" GIT_REFSPEC HIVE_GIT_REVISION_SHA)
 
 MESSAGE(STATUS "Detected root project git revision: ${ROOT_GIT_REVISION_SHA}")
