--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -125,9 +125,12 @@ beekeeper_tsc_build:
     - cd programs/beekeeper/beekeeper_wasm
     - pnpm install
     - npm run build
+  after_script:
+    - cd programs/beekeeper/beekeeper_wasm
+    - npm pack --pack-destination "$CI_PROJECT_DIR/programs/beekeeper/beekeeper_wasm/dist"
   artifacts:
     paths:
-      - "$CI_PROJECT_DIR/programs/beekeeper/beekeeper_wasm/dist"
+      - "$CI_PROJECT_DIR/programs/beekeeper/beekeeper_wasm/dist/hive-beekeeper-*.tgz" # Packed package tests
 
     when: always
 
@@ -205,6 +208,7 @@ test_beekeeper_wasm:
       artifacts: true
 
   script:
+    - tar -xf "$CI_PROJECT_DIR"/programs/beekeeper/beekeeper_wasm/dist/hive-beekeeper-*.tgz --strip-components=1
     - npm run test
 
   artifacts:
@@ -1047,6 +1051,7 @@ deploy_beekeeper_wasm_dev_package:
     NPM_REGISTRY: "gitlab.syncad.com/api/v4/projects/${CI_PROJECT_ID}/packages/npm/"
 
   script:
+    - tar -xf "$CI_PROJECT_DIR"/programs/beekeeper/beekeeper_wasm/dist/hive-beekeeper*.tgz -C "$CI_PROJECT_DIR"/programs/beekeeper/beekeeper_wasm --strip-components=1
     - scripts/ci-helpers/bump_npm_version.sh "$PUBLISH_TOKEN" "$NPM_SCOPE" "$NPM_REGISTRY"
     - scripts/ci-helpers/npm_publish.sh
   needs:
@@ -1067,6 +1072,7 @@ deploy_beekeeper_wasm_production_public_npm:
     NPM_SCOPE: "@hiveio"
     NPM_REGISTRY: "registry.npmjs.org/"
   script:
+    - tar -xf "$CI_PROJECT_DIR"/programs/beekeeper/beekeeper_wasm/dist/hive-beekeeper*.tgz -C "$CI_PROJECT_DIR"/programs/beekeeper/beekeeper_wasm --strip-components=1
     - scripts/ci-helpers/bump_npm_version.sh "$PUBLISH_TOKEN" "$NPM_SCOPE" "$NPM_REGISTRY"
     - scripts/ci-helpers/npm_publish.sh
   needs:
