--- a/programs/beekeeper/beekeeper_wasm/tsconfig.json
+++ b/programs/beekeeper/beekeeper_wasm/tsconfig.json
@@ -42,7 +42,7 @@
       "ES2017"
     ],
     "module": "ES6",
-    "moduleResolution": "Node",
+    "moduleResolution": "Bundler",
     "esModuleInterop": true,
 
     "noErrorTruncation": true
