--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -23,6 +23,7 @@ source = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
+poetry = "^1.7.1"
 pytest = "7.2.2"
 pytest-rerunfailures = "10.2"
 pytest-timeout = "2.1.0"
