--- a/programs/beekeeper/beekeeper_wasm/package.json
+++ b/programs/beekeeper/beekeeper_wasm/package.json
@@ -60,7 +60,7 @@
     "husky": "8.0.3",
     "playwright": "^1.39.0",
     "rollup": "^4.9.0",
-    "rollup-plugin-typescript2": "^0.36.0",
+    "rollup-plugin-dts": "^6.1.0",
     "tslib": "^2.6.2",
     "typedoc": "0.25.3",
     "typedoc-plugin-markdown": "3.17.1",
