--- a/tests/python/api_tests/pattern_tests/tavern/account_history_api_patterns/enum_virtual_ops/15kops_by_block.tavern.yaml
+++ b/tests/python/api_tests/pattern_tests/tavern/account_history_api_patterns/enum_virtual_ops/15kops_by_block.tavern.yaml
@@ -24,3 +24,7 @@
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
+          extra_kwargs:
+            ignore_tags:
+              - operation_id
+              - next_operation_begin
