Fix minor node beekeeper documentation issues

--- a/programs/beekeeper/beekeeper_wasm/package.json
+++ b/programs/beekeeper/beekeeper_wasm/package.json
@@ -40,7 +40,8 @@
         "types": "./dist/bundle/node.d.ts",
         "default": "./dist/bundle/node.js"
       }
-    }
+    },
+    "./package.json": "./package.json"
   },
   "files": [
     "LICENSE.md",
