Simplified syntax of block conversion job's script

--- a/scripts/ci-helpers/mirrornet_jobs.gitlab-ci.yml
+++ b/scripts/ci-helpers/mirrornet_jobs.gitlab-ci.yml
@@ -32,8 +32,8 @@ variables:
       sudo chown -Rf $(id -u):$(id -g) "$BLOCK_LOG_OUTPUT_DIR/$CI_PIPELINE_ID"
       ls -lah "$BLOCK_LOG_OUTPUT_DIR"
       MAINNET_BLOCK_LOG_PATH="$BLOCK_LOG_OUTPUT_DIR/$CI_PIPELINE_ID/mainnet_block_log"
-      [[ -e "$MAINNET_BLOCK_LOG_PATH" ]] && rm "$MAINNET_BLOCK_LOG_PATH"
-      [[ -e "$MAINNET_BLOCK_LOG_PATH.artifacts" ]] && rm "$MAINNET_BLOCK_LOG_PATH.artifacts"
+      rm -f "$MAINNET_BLOCK_LOG_PATH"
+      rm -f "$MAINNET_BLOCK_LOG_PATH.artifacts"
       ln "$BLOCK_LOG_SOURCE_DIR/block_log" "$MAINNET_BLOCK_LOG_PATH"
       ln "$BLOCK_LOG_SOURCE_DIR/block_log.artifacts" "$MAINNET_BLOCK_LOG_PATH.artifacts"
       ls -lAh "$BLOCK_LOG_OUTPUT_DIR/$CI_PIPELINE_ID"
