WIP: DO NOT MERGE simplified pipeline definition to cover only mirrornet part

--- a/scripts/ci-helpers/mirrornet_jobs.gitlab-ci.yml
+++ b/scripts/ci-helpers/mirrornet_jobs.gitlab-ci.yml
@@ -26,7 +26,7 @@ variables:
 
   script:
     - |
-      set -e
+      set -ex
       echo "Converting block log to mirrornet format"
       sudo mkdir -p "$BLOCK_LOG_OUTPUT_DIR/$CI_PIPELINE_ID"
       sudo chown -Rf $(id -u):$(id -g) "$BLOCK_LOG_OUTPUT_DIR/$CI_PIPELINE_ID"
