--- a/libraries/protocol/CMakeLists.txt
+++ b/libraries/protocol/CMakeLists.txt
@@ -44,6 +44,7 @@ SET( SOURCES testnet_blockchain_configuration.cpp
    misc_utilities.cpp
    forward_impacted.cpp
    fixed_string.cpp
+   crypto_memo.cpp
    ${GET_CONFIG_CPP}
    ${HEADERS}
    ${hardfork_hpp_file}
