Update beem library in gitlab CI yaml file

--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -432,7 +432,7 @@ formatting_with_black_check:
   stage: test
   extends: .test_tools_based
   script:
-    - git clone --depth=1 --single-branch --branch master https://gitlab.syncad.com/hive/beem.git
+    - git clone --depth=1 --single-branch --branch mkudela/adjust_testdev_chain_to_new_prefix https://gitlab.syncad.com/hive/beem.git
     - pip3 install junit-xml==${PYTHON_JUNIT_XML_VERSION} python-dateutil==${PYTHON_DATEUTIL_VERSION}
     - cd beem
     - python3 -m pip install --upgrade -r requirements-test.txt
