--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -435,7 +435,7 @@ formatting_with_black_check:
     - git clone --depth=1 --single-branch --branch master https://gitlab.syncad.com/hive/beem.git
     - pip3 install junit-xml==${PYTHON_JUNIT_XML_VERSION} python-dateutil==${PYTHON_DATEUTIL_VERSION}
     - cd beem
-    - python3 -m pip install --upgrade -r requirements-test.txt
+    - python3 -m pip install .[tests]
     - python3 setup.py install
     - cd ..
     - mkdir -p build/tests/hive-node-data
