Try to reduce p2p logging during tests

--- a/tests/python/functional/comment_payment_tests/resources/config.extended.ini
+++ b/tests/python/functional/comment_payment_tests/resources/config.extended.ini
@@ -2,7 +2,7 @@
 log-appender = {"appender":"stderr","stream":"std_error"} {"appender":"p2p","file":"logs/p2p/p2p.log","time_format":"iso_8601_milliseconds"}
 
 # Logger definition json: {"name", "level", "appender"}
-log-logger = {"name":"default","level":"all","appenders":["stderr"]} {"name":"p2p","level":"all","appenders":["p2p"]}
+log-logger = {"name":"default","level":"all","appenders":["stderr"]} {"name":"p2p","level":"warn","appenders":["p2p"]}
 
 # Whether to print backtrace on SIGSEGV
 backtrace = yes
