--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -21,6 +21,7 @@ variables:
   PYTHON_DATEUTIL_VERSION: "2.8.2"
 
   TOX_VERSION: "3.25.1"
+  BEEKEEPY_DIR: "${CI_PROJECT_DIR}/programs/beekeeper/beekeeper_python"
 
   DATA_CACHE_HIVE_PREFIX: "/cache/replay_data_hive"
   BLOCK_LOG_SOURCE_DIR_5M: /blockchain/block_log_5m
@@ -38,7 +39,7 @@ include:
   - local: '/scripts/ci-helpers/prepare_data_image_job.yml'
   - local: '/scripts/ci-helpers/mirrornet_jobs.gitlab-ci.yml'
   - project: 'hive/common-ci-configuration'
-    ref: b4cd2f1f5b8eec2a9bfb2d5b950e0f63953d10a5
+    ref: 32a30125e0b0fd3546cd6f44d258f3ef8923a253
     file:
     - '/templates/wasm_build.gitlab-ci.yml'
     - '/templates/python_projects.gitlab-ci.yml'
@@ -160,6 +161,33 @@ beekeeper_wasm_package_generation:
     when: always
     expire_in: 1 week
 
+  tags:
+    - public-runner-docker
+
+build_beekeepy_wheel:
+  stage: build
+  extends: .build_wheel_template
+  needs:
+    - job: prepare_hived_image
+      artifacts: true
+  variables:
+    PYPROJECT_DIR: "$BEEKEEPY_DIR"
+  before_script:
+    - cp $CI_PROJECT_DIR/hived-binaries/beekeeper $BEEKEEPY_DIR/beekeepy/beekeeper
+  tags:
+    - public-runner-docker
+
+deploy_beekeepy_wheel_to_gitlab:
+  stage: publish
+  extends: .deploy_wheel_to_gitlab_template
+  variables:
+    PYPROJECT_DIR: "$BEEKEEPY_DIR"
+  needs:
+    - job: pre_commit_checks
+    - job: beekeepy_tests
+    - job: build_beekeepy_wheel
+      artifacts: true
+  when: on_success
   tags:
     - public-runner-docker
 
@@ -429,6 +457,17 @@ formatting_with_black_check:
     - job: testnet_node_build
       artifacts: true
 
+.beekeepy_based:
+  extends: .test_tools_based
+  needs:
+    - job: build_beekeepy_wheel
+      artifacts: true
+  before_script:
+    - !reference [.python_based, before_script]
+    # beekeepy is installed from whl so beekeeper is included in package
+    - cd "$BEEKEEPY_DIR" && poetry install --no-root
+    - pip install $(find "$CI_PROJECT_DIR/dist" -name *.whl)
+
 .beem_tests_base:
   stage: test
   extends: .test_tools_based
@@ -441,6 +480,21 @@ formatting_with_black_check:
     - cd ..
     - mkdir -p build/tests/hive-node-data
     - cd tests/python/functional/beem_tests
+    - *run-pytest
+  tags:
+    - public-runner-docker
+
+beekeepy_tests:
+  extends: .beekeepy_based
+  needs:
+    - !reference [.beekeepy_based, needs]
+    - job: testnet_node_build
+      artifacts: true
+  variables:
+    JUNIT_REPORT: "$CI_PROJECT_DIR/tests/python/functional/beekeepy/report.xml"
+    PYTEST_TIMEOUT_MINUTES: 5
+  script:
+    - cd "$CI_PROJECT_DIR/tests/python/functional/beekeepy"
     - *run-pytest
   tags:
     - public-runner-docker
@@ -1094,4 +1148,3 @@ deploy_beekeeper_wasm_production_public_npm:
     - if: '$CI_COMMIT_TAG && $CI_COMMIT_REF_PROTECTED == "true"'
       when: manual
       allow_failure: true
-
